# vvvst

./: .cmake-format.json  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  Rakefile  VVVST.jucer  VVVST_example.jucer  compile_flags.txt  generate-licenses.rb  licenses.json
.github/workflows/: build.yml
Assets/: installer_base.nsi
Source/: Phrase.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
